	rules for method selection have been revised to take advantage of
	the improved ordering.
	See ?Methods and the reference there related to inheritance.

    o	New function unzip() in package 'utils' to expand or list zip
	archives.

    o	Replacement functions for class() and oldClass()  will unset
        the S4 bit when the replacement can't be an S4 object;
        oldClass() will return the S3 class for S4 objects with slot .S3Class.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.

    o	Conversion to Sd and Ssgm by R CMD Rdconv is now defunct.


UTILITIES

    o	R CMD build now also uses a Makevars[.win] file for cleaning
	up src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o	New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

	New front-end script R CMD rtags provides an interface to the
	rtags() function (see R CMD rtags --help for details).

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").

    o	massage-Examples.pl has been replaced by an R script
	share/R/massage-examples.R .

    o	R CMD REMOVE now uses remove.packages() and hence removes all
	members of a bundle.

    o	R CMD SHLIB is now an R script and has a new option -n aka
	--dry-run to show what commands would be run.  The same code
	is used on Unix and Windows.
